Fix bug 129488: kreversi: wrong player (=color) names in moves window

Write Red/Blue in addition to White/Black if the user has chosen
non-BW in the preferences.

BUG: 129488


svn path=/branches/KDE/3.5/kdegames/kreversi/; revision=557254